--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "express": "^4.19.2",
     "puppeteer": "^22.15.0",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.25.0"
